cambios de botones

--- a/v4posme_maui/Views/Invoices/06RevisarProductosPage.xaml
+++ b/v4posme_maui/Views/Invoices/06RevisarProductosPage.xaml
@@ -145,7 +145,7 @@
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="*" />
                                                         <ColumnDefinition Width="*" />
-                                                        <ColumnDefinition Width="*" />
+                                                        <!--<ColumnDefinition Width="*" />-->
                                                     </Grid.ColumnDefinitions>
                                                     <Grid>
                                                         <dx:DXButton
@@ -208,6 +208,7 @@
                                                             </Grid>
                                                         </dx:DXButton>
                                                     </Grid>
+                                                    <!--
                                                     <Grid
                                                         RowSpacing="2"
                                                         ColumnSpacing="3"
@@ -236,6 +237,7 @@
                                                             </Grid>
                                                         </dx:DXButton>
                                                     </Grid>
+                                                    -->
                                                 </Grid>
                                             </ContentView>
                                         </StackLayout>
