Revert "cambios de botones"
This reverts commit b2a43c8dbd64f5cc03d6c0b8a18ca9e97e93c61e.

--- a/v4posme_maui/Views/AboutPage.xaml
+++ b/v4posme_maui/Views/AboutPage.xaml
@@ -137,7 +137,7 @@
                                            TextColor="Red" />
                                 </StackLayout>
                                 <StackLayout Orientation="Horizontal">
-                                    <Label Text="{Binding MontoTotalAbonosDolares,StringFormat='Meta Dólares: $ {0:N2}'}"
+                                    <Label Text="{Binding MontoTotalAbonosDolares,StringFormat='Meta Dólares: C$ {0:N2}'}"
                                            FontSize="12"
                                            FontAttributes="Bold"
                                            TextColor="Red" />
