--- a/v4posme_maui/Resources/Styles/Colors.xaml
+++ b/v4posme_maui/Resources/Styles/Colors.xaml
@@ -19,6 +19,8 @@
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Magenta">#D600AA</Color>
+    <Color x:Key="Salmon">#FA8072</Color>
+    <Color x:Key="FacturadoColor">#FFC53A</Color>
     <Color x:Key="Red">#D10000</Color>
     <Color x:Key="MidnightBlue">#190649</Color>
     <Color x:Key="OffBlack">#1f1f1f</Color>
