--- a/v4posme_maui/Views/Abonos/06PrinterPage.xaml
+++ b/v4posme_maui/Views/Abonos/06PrinterPage.xaml
@@ -30,6 +30,25 @@
                         x:Name="DxStackLayout_"
                         Orientation="Vertical"
                         Padding="20">
+                        <controls:DXPopup x:Name="Popup"
+                                      AllowScrim="True"
+                                      BackgroundColor="{Binding PopupBackgroundColor}"
+                                      VerticalAlignment="Bottom"
+                                      ScrimColor="#b3adb9ce"
+                                      IsOpen="{Binding PopUpShow}">
+                            <StackLayout WidthRequest="250">
+                                <Label Text="{Binding Mensaje}"
+                                       FontAttributes="Bold"
+                                       FontSize="15"
+                                       TextColor="{StaticResource White}"
+                                       Margin="20, 20" />
+                                <Button Text="Aceptar"
+                                        Clicked="ClosePopup_Clicked"
+                                        BackgroundColor="{StaticResource Gray600}"
+                                        FontSize="20"
+                                        TextColor="White" />
+                            </StackLayout>
+                        </controls:DXPopup>
                         <dx:DXStackLayout Orientation="Vertical"
                                           Margin="0,0,0,10"
                                           HorizontalOptions="Center">
